--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "node": "^20.18.1",
+    "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "pg": "^8.13.1",
     "xss-clean": "^0.1.4"
