--- a/Frontend/TripSync/package.json
+++ b/Frontend/TripSync/package.json
@@ -10,22 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
-
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "html2canvas": "^1.4.1",
-
     "jspdf": "^2.5.2",
     "prop-types": "^15.8.1",
-
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
