--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "socket.io": "^4.8.1",
     "xss-clean": "^0.1.4"
   }
 }
