--- a/Server/package.json
+++ b/Server/package.json
@@ -16,10 +16,12 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.18.1",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "xss-clean": "^0.1.4"
   }
