--- a/Frontend/TripSync/package.json
+++ b/Frontend/TripSync/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.15.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
