--- a/Frontend/TripSync/package.json
+++ b/Frontend/TripSync/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.15.0",
     "html2canvas": "^1.4.1",
@@ -27,10 +28,12 @@
     "lucide-react": "^0.468.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1"
   },
